2011-02-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/47840
	* config/i386/avxintrin.h (_mm256_insert_epi32): Use _mm_insert_epi32.
	(_mm256_insert_epi64): Use _mm_insert_epi64.

2011-02-18  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config.gcc (hppa[12]*-*-hpux11*): Set extra_parts.
	* config/pa/stublib.c (pthread_default_stacksize_np, pthread_mutex_lock,
	pthread_mutex_unlock, pthread_once): Reinstate pthread stubs.
	* config/pa/t-pa-hpux11: Add rules to build pthread stubs.
	* config/pa/t-pa64: Likewise.
	* config/pa/pa-hpux11.h (LINK_GCC_C_SEQUENCE_SPEC): Define.

2011-02-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43653
	* config/i386/i386.c (ix86_secondary_reload): Handle SSE
	input reload with PLUS RTX.

2011-02-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR pch/14940
	* config/alpha/host-osf.c: New file.
	* config/alpha/x-osf: New file.
	* config.host (alpha*-dec-osf*): Use it.

2011-02-15  Tijl Coosemans  <tijl@coosemans.org>

	* config/i386/freebsd.h (SUBTARGET32_DEFAULT_CPU): Add.
	Update copyright years.

2011-02-11  Bernd Schmidt  <bernds@codesourcery.com>

	PR rtl-optimization/47166
	* reload1.c (emit_reload_insns): Disable the spill_reg_store
	mechanism for PRE_MODIFY and POST_MODIFY.
	(inc_for_reload): For PRE_MODIFY, return the insn that sets the
	reloadreg.

2011-02-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2011-02-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config.gcc (hppa[12]*-*-hpux11*): Don't set extra_parts.
	* config/pa/stublib.c (pthread_default_stacksize_np, pthread_mutex_lock,
	pthread_mutex_unlock): Remove.
	* config/pa/t-pa-hpux11: Remove rules to build pthread stubs.
	* config/pa/t-pa64: Likewise.
	* config/pa/pa64-hpux.h (LIB_SPEC): In static links, link against
	shared libc if not linking against libpthread.
	* config/pa/pa-hpux11.h (LIB_SPEC): Likewise.

2011-02-03  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline: