@@ -1,3 +1,9 @@
+2011-02-25  Andriy Gapon <avg@freebsd.org>
+
+	PR target/45808
+	* config/freebsd-spec.h (FBSD_LIB_SPEC): Handle the shared case.
+	Update copyright years.
+
 2011-02-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/47840
